# ndarray-koans

./: .gitignore  Cargo.toml  README.md  build.rs  plan.md
python/: .dockerignore  Cluster generation - smoke check.ipynb  Cluster generation.ipynb  Clustering check.ipynb  Dockerfile  Pipfile  README.md  docker-compose.yml  requirements.txt
src/: lib.rs  main.rs  path_to_enlightenment.rs
src/koans/: 00_greetings.rs  01_constructors.rs
src/koans/00_greetings/: 00_greetings.rs
src/koans/01_constructors/: 00_from_vec.rs  01_constructors.rs  01_macro_literal.rs  02_two_dimensional.rs  03_three_dimensional.rs  04_random.rs  05_random_take2.rs
src/koans/02_cluster_generation/: 00_origin.rs  01_as_a_function.rs  02_smoke_check.rs  03_translation.rs  04_views.rs  05_seed.rs  06_dataset.rs
src/koans/03_interlude/: 00_the_plan.rs
src/koans/03_k_means/: 00_the_plan.rs
src/koans/04_initialisation/: 00_input.rs  01_array_base.rs
src/koans/05_assignment/: 00_distance.rs  01_generalised_distance.rs  02_closest.rs  03_cluster_memberships.rs
src/koans/06_update/: 00_incremental_mean.rs  01_centroids_hashmap.rs  02_centroids_array2.rs
src/koans/07_k_means/: 00_assembling.rs
src/koans/08_goodbye/: 00_goodbye.rs
