[package]
name = "ndarray-koans"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
regex = "1.3.1"
ansi_term = "0.12.1"

[dev-dependencies]
ndarray = { version = "0.13", features = ["approx"] }
ndarray-rand = "0.11"
ndarray-stats = "0.3"
ndarray-npy = { version = "0.5", default-features = false }
rand_isaac = "0.2.0"
approx = "0.3"

[[bin]]
name = "koans"
path = "src/main.rs"

[lib]
name = "koans"
path = "src/lib.rs"
